Major bug fix: double field analysis removed
Former-commit-id: 3b139c17e6e265eb400004180628250463f82d9c

--- a/vasca/examples/inspect_artifacts.ipynb
+++ b/vasca/examples/inspect_artifacts.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "region_name = \"TDS\"  #_ELAISN1\n",
+    "region_name = \"WD\" #\"TDS\"  #_ELAISN1\n",
     "\n",
     "# Add artifacts here\n",
     "dd_arts = [{\"field_id\":\"GNU2597312684324028416\", \"ra\":243.31, \"dec\":55.79, \"rad\":0.01},   # 0 Detection structures next to bright source\n",
@@ -50,12 +50,24 @@
     "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
     "        ]\n",
     "\n",
+    "dd_arts = [{\"field_id\":\"GNU2534578948688314368\", \"ra\":215.32584399689677, \"dec\":52.59654535152096, \"rad\":0.002}] #20 WD association with very nearby source \t\n",
+    "\n",
     "# Variables to select detections and plotting options\n",
     "import numpy as np\n",
     "\n",
     "#Select artifacts that lead to detection removal. New column with \"art_sel\" will be created for detections to cut on. \n",
     "#This variable is zero if none of the artifacts below is selected, othervise the \"artifact value\"\n",
-    "art_bit_sel = [2,4,8,16,32,64,128,256,512] # [2,4,8,128]\n",
+    "art_bit_sel = [2,4] # [2,4,8,128] ,8,16,32,64,128,256,512\n",
+    "s2n_min    = 4                                                       # Minimum s2n of detections\n",
+    "r_fov_max  = 0.5                                                     #Maximum distance from the camera center\n",
+    "vars       = [\"ellip_world\",\"size_world\",\"class_star\",\"art_sel\"]     # Variables to be used to select detections on artifacts\n",
+    "vars_sel   = [[0.4,1.0]    ,[6,np.inf] ,[-0.5,0.15] ,[0.5,np.inf]]   # Selection of detections on artifacts\n",
+    "vars_col   = [\"blue\"       ,\"magenta\"  ,\"green\"     ,\"white\"]           # Circle color for selected detections on artifacts\n",
+    "vars_ms    = [8            ,6.5         , 5          ,3.5]           # Marker size of circles showing detections selected by these artifacts. \n",
+    "vars_bins  = [40           ,\"sqrt\"      , 40         ,\"sqrt\"]        # Nr bins for histogram plots\n",
+    "vars_log   = [False        ,True        , False      , True ]        # Show histograms in logy?\n",
+    "lw = 0.8                                                             # Line width for circles of detections on skymaps\n",
+    "\n",
     "\n",
     "# http://www.galex.caltech.edu/wiki/GCAT_Manual#Flags\n",
     "# [1,2,4,8,16,32,64,128,256,512]\n",
@@ -68,17 +80,7 @@
     "#    ( 64): dimask; dichroic reflection artifact mask flag\n",
     "#    (128): varmask; Masked pixel determined by varpix.\n",
     "#    (256): hotmask; Detector hot spots.\n",
-    "#    (512): yaghost; Possible ghost image from YA slope. This is only relevant for data taken after the completion of GR6. \n",
-    "\n",
-    "s2n_min    = 4                                                       # Minimum s2n of detections\n",
-    "r_fov_max  = 0.5                                                     #Maximum distance from the camera center\n",
-    "vars       = [\"ellip_world\",\"size_world\",\"class_star\",\"art_sel\"]     # Variables to be used to select detections on artifacts\n",
-    "vars_sel   = [[0.3,1.0]    ,[6,np.inf] ,[-0.5,0.15] ,[0.5,np.inf]]   # Selection of detections on artifacts\n",
-    "vars_col   = [\"b\"          ,\"m\"         ,\"g\"         ,\"w\"]           # Circle color for selected detections on artifacts\n",
-    "vars_ms    = [8            ,6.5         , 5          ,3.5]           # Marker size of circles showing detections selected by these artifacts. \n",
-    "vars_bins  = [40           ,\"sqrt\"      , 40         ,\"sqrt\"]        # Nr bins for histogram plots\n",
-    "vars_log   = [False        ,True        , False      , True ]        # Show histograms in logy?\n",
-    "lw = 0.8                                                             # Line width for circles of detections on skymaps"
+    "#    (512): yaghost; Possible ghost image from YA slope. This is only relevant for data taken after the completion of GR6. "
    ]
   },
   {
@@ -94,7 +96,16 @@
    "execution_count": 2,
    "id": "dbb1bbbb-3d8e-4475-89ca-d97839217283",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: UnitsWarning: '\"h:m:s\"' did not parse as fits unit: Invalid character at col 0 If this is meant to be a custom unit, define it with 'u.def_unit'. To have it recognized inside a file reader or other code, enable it with 'u.add_enabled_units'. For details, see https://docs.astropy.org/en/latest/units/combining_and_defining.html [astropy.units.core]\n",
+      "WARNING: UnitsWarning: '\"d:m:s\"' did not parse as fits unit: Invalid character at col 0 If this is meant to be a custom unit, define it with 'u.def_unit'. To have it recognized inside a file reader or other code, enable it with 'u.add_enabled_units'. For details, see https://docs.astropy.org/en/latest/units/combining_and_defining.html [astropy.units.core]\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib widget\n",
     "import ipywidgets as widgets\n",
@@ -117,7 +128,13 @@
     "#Load region and field\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\"\n",
     "rg = Region()\n",
-    "rg.load_from_fits(region_fname)"
+    "rg.load_from_fits(region_fname)\n",
+    "\n",
+    "#Put above cuts in a table for better displaying later\n",
+    "tt_var_info = Table()\n",
+    "tt_var_info[\"variable\"]=vars\n",
+    "tt_var_info[\"color\"] = vars_col\n",
+    "tt_var_info[\"cut\"] = vars_sel"
    ]
   },
   {
@@ -136,13 +153,40 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div><i>Table length=4</i>\n",
+       "<table id=\"table140709515685664\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>variable</th><th>color</th><th>cut</th></tr></thead>\n",
+       "<thead><tr><th>str11</th><th>str7</th><th>float64[2]</th></tr></thead>\n",
+       "<tr><td>ellip_world</td><td>blue</td><td>0.4 .. 1.0</td></tr>\n",
+       "<tr><td>size_world</td><td>magenta</td><td>6.0 .. inf</td></tr>\n",
+       "<tr><td>class_star</td><td>green</td><td>-0.5 .. 0.15</td></tr>\n",
+       "<tr><td>art_sel</td><td>white</td><td>0.5 .. inf</td></tr>\n",
+       "</table></div>"
+      ],
+      "text/plain": [
+       "<Table length=4>\n",
+       "  variable   color      cut     \n",
+       "   str11      str7   float64[2] \n",
+       "----------- ------- ------------\n",
+       "ellip_world    blue   0.4 .. 1.0\n",
+       " size_world magenta   6.0 .. inf\n",
+       " class_star   green -0.5 .. 0.15\n",
+       "    art_sel   white   0.5 .. inf"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e11e2415c06443d87c810e10605acc2",
+       "model_id": "9028d20925174bf89149621f513e8f3e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='art_idx', max=19), Output()), _dom_classes=('widget-inte…"
+       "interactive(children=(IntSlider(value=0, description='art_idx', max=0), Output()), _dom_classes=('widget-inter…"
       ]
      },
      "execution_count": 3,
@@ -151,6 +195,7 @@
     }
    ],
    "source": [
+    "display(tt_var_info)\n",
     "def plot_art(art_idx):\n",
     "    # Get field\n",
     "    dd_art = dd_arts[art_idx]\n",
@@ -170,6 +215,7 @@
     "    sel_s2nfov = sel_s2n * sel_fov\n",
     "    fd.tt_detections[\"sel\"]  = sel_s2nfov\n",
     "    tt_det_all = fd.tt_detections[sel_s2nfov]\n",
+    "    display(tt_det_all)\n",
     "\n",
     "\n",
     "    # Apply bitmask cut\n",
@@ -231,6 +277,14 @@
     "    display(\"Kept fraction of detections in entire field\",tt_eff)\n",
     "widgets.interactive( plot_art, art_idx=widgets.IntSlider(min=0, max=len(dd_arts)-1, value=0, step=1))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "521be8ff-9895-48f1-a07f-c66232e3b05d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
