Added environment creation
Former-commit-id: 9a96af1ecceec95d5cf51bfb62bc58267b058589

--- a/vasca/examples/run_gPhoton.ipynb
+++ b/vasca/examples/run_gPhoton.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "124053ac-1496-45fd-b4ad-7cf0f836e003",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,23 @@
       "Running query with gFind for:\n",
       " label         ra               dec        \n",
       "----- ----------------- ------------------\n",
-      "WD900 215.3258439968967 52.596545351520945\n"
+      "WD900 215.3258439968967 52.596545351520945\n",
+      "Failed: https://mastcomp.stsci.edu/portal/Mashup/MashupQuery.asmx/GalexPhotonListQueryTest?query=select time from GPFCore.dbo.NUVShutterPOTimeV where time >= 794781976995 and time < 794782843995 order by time -- 1694157530&format=extjs\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Query never finished on server, run with verbose turned on for more info.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/vas/lib/python3.10/site-packages/gPhoton/gFind.py\u001b[0m in \u001b[0;36mgfind\u001b[0;34m(band, detsize, exponly, gaper, maxgap, minexp, quiet, retries, skypos, trange, verbose, skyrange)\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/vas/lib/python3.10/site-packages/gPhoton/dbasetools.py\u001b[0m in \u001b[0;36mfGetTimeRanges\u001b[0;34m(band, skypos, trange, detsize, verbose, maxgap, minexp, skyrange, maxgap_override, minexp_override)\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/vas/lib/python3.10/site-packages/gPhoton/dbasetools.py\u001b[0m in \u001b[0;36mget_valid_times\u001b[0;34m(band, skypos, trange, detsize, verbose, skyrange)\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/envs/vas/lib/python3.10/site-packages/gPhoton/gQuery.py\u001b[0m in \u001b[0;36mgetArray\u001b[0;34m(query, verbose, retries)\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Query never finished on server, run with verbose turned on for more info."
      ]
     }
    ],
@@ -165,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
