Changed naming of coadd variables
Former-commit-id: eaed8b09602f6c452bf2c87b9cbd2763371b084e

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "region_name = \"WD\" #\"MDIS_10-800\" # \"TDS\" # _ELAISN1\n",
-    "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\"\n",
+    "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\"_cat.fits\"\n",
     "sort_par = \"rg_src_id\" # \"flux\"\n",
     "redo_src_sel = False\n",
     "only_sel_srcs = False\n",
@@ -42,7 +42,8 @@
     "            87494 ,98629 ,118735 ,135168 ,154145 ,164594 ,172498 ,185620 ,194179 ,216306 ,221274 ,255447 ,258839 ,\n",
     "            283349 ,286520 ,311664 ,335541 ,374256 ,388731 ,443231 ,444083 ,506417 ,506472 ,506485 ,506618 ,552767 ,559483 ,] # MDIS Most NUV variablle nxv_nuv>2\n",
     "srcs_ids = [900 ,11630 ,52486 ,53151 ,58506 ,72801 ,82069 ,84614 ,163052 ,165195 ,179997 ,] # MDIS WD\n",
-    "srcs_ids = [117 ,] # WD WD"
+    "srcs_ids = [142 ,265 ,] # WD WD\n",
+    "srcs_ids = []"
    ]
   },
   {
@@ -57,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 80 selected: 56\n"
+      "Nr sources: 97 selected: 54\n"
      ]
     },
     {
@@ -71,21 +72,23 @@
     {
      "data": {
       "text/html": [
-       "<div><i>Table length=1</i>\n",
-       "<table id=\"table140256502555136\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>assoc_id</th><th>assoc_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>assoc_ffactor</th><th>assoc_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>otype</th><th>MAIN_ID</th><th>OTYPES</th><th>Z_VALUE</th><th>Distance_distance</th><th>Distance_unit</th><th>DISTANCE_RESULT</th><th>ogrp</th></tr></thead>\n",
+       "<div><i>Table length=2</i>\n",
+       "<table id=\"table139853339869040\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>coadd_id</th><th>coadd_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>coadd_ffactor</th><th>coadd_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>otype</th><th>MAIN_ID</th><th>OTYPES</th><th>Z_VALUE</th><th>Distance_distance</th><th>Distance_unit</th><th>DISTANCE_RESULT</th><th>ogrp</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec2</th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>int64</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes4</th><th>float32</th><th>bytes8</th></tr></thead>\n",
-       "<tr><td>-1</td><td>35 .. 55</td><td>215.32584399689677</td><td>52.59654535152096</td><td>0.061777495</td><td>-0.073819295</td><td>0.27413565</td><td>0.076620735</td><td>0.8073005</td><td>368</td><td>0.15070449</td><td>1 .. 2</td><td>True</td><td>69.766335 .. 78.84211</td><td>0.29899392 .. 0.35905793</td><td>0.0028636202 .. 0.00013604654</td><td>17.501484 .. 8.51541</td><td>3.2471603e-13 .. 0.18849035</td><td>3.8351872 .. 1.1662406</td><td>0.919581 .. 0.9822601</td><td>-18.350409 .. -3.4928644</td><td>-1</td><td>117</td><td>6</td><td>1.1639541</td><td>0.017203152</td><td>WD*</td><td>SDSS J142118.18+523547.1</td><td>WD*|WD*|blu|WD*|*|Opt|WD?</td><td>0.0000500</td><td>311.0400</td><td>pc</td><td>0.5117</td><td>WD</td></tr>\n",
+       "<tr><td>-1</td><td>65 .. 68</td><td>215.3258251809816</td><td>52.59654064337691</td><td>0.050360497</td><td>-0.07375955</td><td>0.26852778</td><td>0.076726675</td><td>0.79896915</td><td>368</td><td>0.11300543</td><td>1 .. 2</td><td>True</td><td>69.72519 .. 79.03558</td><td>0.22222711 .. 0.321316</td><td>0.002134229 .. 0.00021953335</td><td>13.988516 .. 9.005532</td><td>3.3108735e-17 .. 0.07128012</td><td>3.2579195 .. 1.2637537</td><td>0.9190387 .. 0.9846705</td><td>-23.128105 .. -3.282504</td><td>-1</td><td>142</td><td>6</td><td>1.1398447</td><td>0.010448129</td><td>WD*</td><td>SDSS J142118.18+523547.1</td><td>WD*|WD*|blu|WD*|*|Opt|WD?</td><td>0.0000500</td><td>311.0400</td><td>pc</td><td>0.4919</td><td>WD</td></tr>\n",
+       "<tr><td>-1</td><td>138 .. 68</td><td>214.9642150671265</td><td>52.621268300836206</td><td>0.04451492</td><td>-0.18287745</td><td>0.22787334</td><td>0.9952592</td><td>0.5621546</td><td>784</td><td>0.18468158</td><td>1 .. 2</td><td>True</td><td>29.59391 .. 36.6164</td><td>0.111993775 .. 0.22920944</td><td>0.0022042582 .. 0.0008774234</td><td>3.8099718 .. 4.9800878</td><td>4.7207465e-09 .. 0.10959702</td><td>1.8555318 .. 1.2163855</td><td>1.063451 .. 0.9980463</td><td>12.4877825 .. -0.26716673</td><td>-1</td><td>265</td><td>6</td><td>1.2425294</td><td>0.013673056</td><td>WD*</td><td>SDSS J141951.41+523716.5</td><td>WD*|*|Opt</td><td>-0.0005690</td><td>1227.8400</td><td>pc</td><td>0.3502</td><td>WD</td></tr>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "<Table length=1>\n",
-       "fd_src_id  nr_det          ra         ... Distance_unit DISTANCE_RESULT  ogrp \n",
-       "                          deg         ...                    arcsec           \n",
-       "  int32   int32[2]      float64       ...     bytes4        float32     bytes8\n",
-       "--------- -------- ------------------ ... ------------- --------------- ------\n",
-       "       -1 35 .. 55 215.32584399689677 ...            pc          0.5117     WD"
+       "<Table length=2>\n",
+       "fd_src_id   nr_det          ra               dec           pos_err      pos_xv    pos_var   ...           OTYPES              Z_VALUE      Distance_distance Distance_unit DISTANCE_RESULT  ogrp \n",
+       "                           deg               deg            arcsec     arcsec2    arcsec2   ...                                                                                 arcsec           \n",
+       "  int32    int32[2]      float64           float64         float32     float32    float32   ...          bytes32              float64           float64          bytes4        float32     bytes8\n",
+       "--------- --------- ----------------- ------------------ ----------- ----------- ---------- ... ------------------------- ---------------- ----------------- ------------- --------------- ------\n",
+       "       -1  65 .. 68 215.3258251809816  52.59654064337691 0.050360497 -0.07375955 0.26852778 ... WD*|WD*|blu|WD*|*|Opt|WD?        0.0000500          311.0400            pc          0.4919     WD\n",
+       "       -1 138 .. 68 214.9642150671265 52.621268300836206  0.04451492 -0.18287745 0.22787334 ...                 WD*|*|Opt       -0.0005690         1227.8400            pc          0.3502     WD"
       ]
      },
      "metadata": {},
@@ -113,8 +116,8 @@
     "\n",
     "#Setup some global setup parameters that usually don't need to be adjusted\n",
     "\n",
-    "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\",\"assoc_ffactor\",\"assoc_fdiff_s2n\"]\n",
-    "show_map_pars = [\"rg_src_id\",\"obs_filter_id\",\"ra\",\"dec\",\"pos_err\",\"pos_xv\", \"pos_cpval\",\"nr_det\",\"flux\",\"flux_cpval\", \"nr_fd_srcs\",\"assoc_ffactor\",\"assoc_fdiff_s2n\",\"sel\"]\n",
+    "show_lc_pars = [\"rg_src_id\",\"nr_det\",\"flux\",\"flux_cpval\",\"flux_nxv\",\"flux_rchiq\",\"coadd_ffactor\",\"coadd_fdiff_s2n\"]\n",
+    "show_map_pars = [\"rg_src_id\",\"obs_filter_id\",\"ra\",\"dec\",\"pos_err\",\"pos_xv\", \"pos_cpval\",\"nr_det\",\"flux\",\"flux_cpval\", \"nr_fd_srcs\",\"coadd_ffactor\",\"coadd_fdiff_s2n\",\"sel\"]\n",
     "\n",
     "#Load region\n",
     "rg = Region()\n",
@@ -162,12 +165,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d358f23e173c4ff5923b1f969eb466e3",
+       "model_id": "426f9953ca2a4ee992e175bdc6e4527c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(117,), value=117), IntSlider(value=0,…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(142, 265), value=142), IntSlider(valu…"
       ]
      },
      "metadata": {},
@@ -294,7 +297,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52fb3b2adefb4ebda6b9e0e57b8eadb9",
+       "model_id": "e5a84c2b96784f7d9f867fefe9897af6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -338,7 +341,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9564c4ff833443adb38f821b02c91a96",
+       "model_id": "e09483afba854c7fb3a4b6785d41c188",
        "version_major": 2,
        "version_minor": 0
       },
