--- a/vasca/examples/inspect_artifacts.ipynb
+++ b/vasca/examples/inspect_artifacts.ipynb
@@ -60,12 +60,12 @@
     "art_bit_sel = [2,4] # [2,4,8,128] ,8,16,32,64,128,256,512\n",
     "s2n_min    = 4                                                       # Minimum s2n of detections\n",
     "r_fov_max  = 0.5                                                     #Maximum distance from the camera center\n",
-    "vars       = [\"ellip_world\",\"size_world\",\"class_star\",\"art_sel\"]     # Variables to be used to select detections on artifacts\n",
-    "vars_sel   = [[0.4,1.0]    ,[6,np.inf] ,[-0.5,0.15] ,[0.5,np.inf]]   # Selection of detections on artifacts\n",
-    "vars_col   = [\"blue\"       ,\"magenta\"  ,\"green\"     ,\"white\"]           # Circle color for selected detections on artifacts\n",
-    "vars_ms    = [8            ,6.5         , 5          ,3.5]           # Marker size of circles showing detections selected by these artifacts. \n",
-    "vars_bins  = [40           ,\"sqrt\"      , 40         ,\"sqrt\"]        # Nr bins for histogram plots\n",
-    "vars_log   = [False        ,True        , False      , True ]        # Show histograms in logy?\n",
+    "vars       = [\"ellip_world\",\"size_world\",\"class_star\",\"art_sel\"  , \"flux_app_ratio\"]     # Variables to be used to select detections on artifacts\n",
+    "vars_sel   = [[0.4,1.0]    ,[6,np.inf] ,[-0.5,0.15] ,[0.5,np.inf], [-np.inf,0.1]]   # Selection of detections on artifacts\n",
+    "vars_col   = [\"blue\"       ,\"magenta\"  ,\"green\"     ,\"white\"     , \"yellow\"]           # Circle color for selected detections on artifacts\n",
+    "vars_ms    = [8            ,6.5         , 5          ,3.5        , \"1.5\"]           # Marker size of circles showing detections selected by these artifacts. \n",
+    "vars_bins  = [40           ,\"sqrt\"      , 40         ,\"sqrt\"     , 40]        # Nr bins for histogram plots\n",
+    "vars_log   = [False        ,True        , False      , True      , False]        # Show histograms in logy?\n",
     "lw = 0.8                                                             # Line width for circles of detections on skymaps\n",
     "\n",
     "\n",
@@ -96,16 +96,7 @@
    "execution_count": 2,
    "id": "dbb1bbbb-3d8e-4475-89ca-d97839217283",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: '\"h:m:s\"' did not parse as fits unit: Invalid character at col 0 If this is meant to be a custom unit, define it with 'u.def_unit'. To have it recognized inside a file reader or other code, enable it with 'u.add_enabled_units'. For details, see https://docs.astropy.org/en/latest/units/combining_and_defining.html [astropy.units.core]\n",
-      "WARNING: UnitsWarning: '\"d:m:s\"' did not parse as fits unit: Invalid character at col 0 If this is meant to be a custom unit, define it with 'u.def_unit'. To have it recognized inside a file reader or other code, enable it with 'u.add_enabled_units'. For details, see https://docs.astropy.org/en/latest/units/combining_and_defining.html [astropy.units.core]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib widget\n",
     "import ipywidgets as widgets\n",
@@ -154,25 +145,27 @@
     {
      "data": {
       "text/html": [
-       "<div><i>Table length=4</i>\n",
-       "<table id=\"table140709515685664\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<div><i>Table length=5</i>\n",
+       "<table id=\"table139640528534736\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>variable</th><th>color</th><th>cut</th></tr></thead>\n",
-       "<thead><tr><th>str11</th><th>str7</th><th>float64[2]</th></tr></thead>\n",
+       "<thead><tr><th>str14</th><th>str7</th><th>float64[2]</th></tr></thead>\n",
        "<tr><td>ellip_world</td><td>blue</td><td>0.4 .. 1.0</td></tr>\n",
        "<tr><td>size_world</td><td>magenta</td><td>6.0 .. inf</td></tr>\n",
        "<tr><td>class_star</td><td>green</td><td>-0.5 .. 0.15</td></tr>\n",
        "<tr><td>art_sel</td><td>white</td><td>0.5 .. inf</td></tr>\n",
+       "<tr><td>flux_app_ratio</td><td>yellow</td><td>-inf .. 0.1</td></tr>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "<Table length=4>\n",
-       "  variable   color      cut     \n",
-       "   str11      str7   float64[2] \n",
-       "----------- ------- ------------\n",
-       "ellip_world    blue   0.4 .. 1.0\n",
-       " size_world magenta   6.0 .. inf\n",
-       " class_star   green -0.5 .. 0.15\n",
-       "    art_sel   white   0.5 .. inf"
+       "<Table length=5>\n",
+       "   variable     color      cut     \n",
+       "    str14        str7   float64[2] \n",
+       "-------------- ------- ------------\n",
+       "   ellip_world    blue   0.4 .. 1.0\n",
+       "    size_world magenta   6.0 .. inf\n",
+       "    class_star   green -0.5 .. 0.15\n",
+       "       art_sel   white   0.5 .. inf\n",
+       "flux_app_ratio  yellow  -inf .. 0.1"
       ]
      },
      "metadata": {},
@@ -181,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9028d20925174bf89149621f513e8f3e",
+       "model_id": "dc028baed5df452b807aab96d75f1d1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,9 +258,9 @@
     "    plt.show()\n",
     "    \n",
     "    #Draw some distributions in field\n",
-    "    fig_dist, axs = plt.subplots(1,4,figsize=(12, 3.5))\n",
+    "    fig_dist, axs = plt.subplots(1,5,figsize=(14, 3.5))\n",
     "    axs = axs.flatten()\n",
-    "    for ii in range(0,4):\n",
+    "    for ii in range(0,5):\n",
     "        axs[ii].hist([tt_det_all[vars[ii]],tt_det[vars[ii]]],density=True, bins = vars_bins[ii], log = vars_log[ii], histtype=\"step\")\n",
     "        axs[ii].set_xlabel(vars[ii])\n",
     "    plt.tight_layout()\n",
