--- a/vasca/examples/cross_match.ipynb
+++ b/vasca/examples/cross_match.ipynb
@@ -319,9 +319,7 @@
     "# Add object group\n",
     "add_ogrp(rc,\"tt_sources\")\n",
     "\n",
-    "display(rc.tt_sources)\n",
-    "#Write and show\n",
-    "#rc.write_to_fits(region_fname)\n"
+    "display(rc.tt_sources)\n"
    ]
   },
   {
@@ -385,7 +383,7 @@
     "rc.add_table(tt_nodes[all_idx],\"tt_otypes\")\n",
     "add_ogrp(rc,\"tt_otypes\")\n",
     "rc.tt_otypes[\"otype\",\"Candidate\",\"Description\",\"ogrp\",\"Label\",\"Category\",\"Subcategory\"].pprint_all()#show_dtype=True #,\"Status\",\"Priority\"\n",
-    "rc.write_to_fits(region_fname)"
+    "rc.write_to_fits(region_cat_fname)"
    ]
   },
   {
