--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -55,7 +55,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=4</i>\n",
-       "<table id=\"table140247947410640\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139734627498496\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_xv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>coadd_src_id</th><th>coadd_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>coadd_ffactor</th><th>coadd_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>hr</th><th>hr_err</th><th>otype</th><th>main_id</th><th>otypes</th><th>z_value</th><th>distance_distance</th><th>distance_unit</th><th>distance_result</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th>arcsec2</th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>arcsec</th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>int64</th><th>int32</th><th>int32</th><th>float32</th><th>float32</th><th>bytes32</th><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes4</th><th>float32</th></tr></thead>\n",
@@ -67,14 +67,14 @@
       ],
       "text/plain": [
        "<Table length=4>\n",
-       "fd_src_id  nr_det          ra         ... distance_unit distance_result\n",
-       "                          deg         ...                    arcsec    \n",
-       "  int32   int32[2]      float64       ...     bytes4        float32    \n",
-       "--------- -------- ------------------ ... ------------- ---------------\n",
-       "       -1  35 .. 5 334.61900740472345 ...            pc          0.3261\n",
-       "       -1  35 .. 4  333.5413675869932 ...            pc          0.2825\n",
-       "       -1  28 .. 9 150.65361426058803 ...            pc          0.4992\n",
-       "       -1 12 .. -1 244.14364033210146 ...            pc          0.9987"
+       "fd_src_id  nr_det          ra                  dec           ...     z_value      distance_distance distance_unit distance_result\n",
+       "                          deg                  deg           ...                                                       arcsec    \n",
+       "  int32   int32[2]      float64              float64         ...     float64           float64          bytes4        float32    \n",
+       "--------- -------- ------------------ ---------------------- ... ---------------- ----------------- ------------- ---------------\n",
+       "       -1  35 .. 5 334.61900740472345 -0.0033813554025151345 ...        1.3299500          121.7450            pc          0.3261\n",
+       "       -1  35 .. 4  333.5413675869932     0.8794347888579439 ...               --          439.0000            pc          0.2825\n",
+       "       -1  28 .. 9 150.65361426058803      2.643111670533707 ...        1.9900000          293.2980            pc          0.4992\n",
+       "       -1 12 .. -1 244.14364033210146      54.16991388586225 ...               --           93.6920            pc          0.9987"
       ]
      },
      "metadata": {},
@@ -151,7 +151,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5bbb605984e4fd18e21af9ab893f5b7",
+       "model_id": "6c4a4ebd4a2b476b973b24e46cce10a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,7 +283,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8255ca312f1a4518a7a043876d14d3f0",
+       "model_id": "4e48c5fe46c347548364037517ceb757",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,7 +327,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a136b448a754077b0ceced7ab5ce2b2",
+       "model_id": "ae80e3f9f5074732a09581ed6329773d",
        "version_major": 2,
        "version_minor": 0
       },
